# synthetic_ts_db

./: CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  get_data.py  main.py  pyproject.toml  requirements.txt
src/: main.py
src/postgres/: manage_tables.py  postgres_connection.py  values_generator.py
src/utils/: parse_args.py
